--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,7 +1,7 @@
 .label-input {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   margin-left: 90px;
   margin-bottom: 30px;
 }
